syntax = "proto3";
package pb;

//import "response.proto";

//同步消息
message SyncMessage{
	int32  type       = 11;
    string Id         = 12;
    uint64 SessionId  = 13;
    string UserId     = 14;
    string Content    = 15;
    uint64 SyncKey    = 16;
    int64  CreateTime = 17;
}

message SyncFinInform{
	uint64 SyncKey = 11;
}


message SyncFinResponse{
	uint64 SyncKey = 11;
}